[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/enemies/met_01.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/enemies/met_01.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/se/Hit.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=3]
resource_name = "close"
length = 0.21
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle1"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle2"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "jump"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=7]
resource_name = "open"
length = 0.21
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 3, 6, 3 ]
}

[node name="met_01" type="KinematicBody2D"]
pause_mode = 1
collision_layer = 66
collision_mask = 0
script = ExtResource( 1 )

[node name="coll_box" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="hit_box" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 33
collision_mask = 0

[node name="box" type="CollisionShape2D" parent="hit_box"]
shape = SubResource( 2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -2 )
texture = ExtResource( 2 )
hframes = 8
frame = 3

[node name="anim" type="AnimationPlayer" parent="."]
anims/close = SubResource( 3 )
anims/idle1 = SubResource( 4 )
anims/idle2 = SubResource( 5 )
anims/jump = SubResource( 6 )
anims/open = SubResource( 7 )
anims/walk = SubResource( 8 )

[node name="audio" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="hit" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 3 )
[connection signal="body_entered" from="hit_box" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="hit_box" to="." method="_on_hit_box_body_exited"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_finished"]
